--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,27 @@
 <%- include('partials/header', {title: 'Upgrade Study App',
 style:'../css/main.css'}) %>
 
-<section class="hero is-fullheight-with-navbar hero-custom">
-  <div class="hero-body">
-    <div class="container has-text-centered">
-      <div class="columns is-vcentered">
-        <div class="column is-12">
-          <h1 class="title is-1">FlightPath Advancement</h1>
-          <br />
-          <p class="subtitle">
-            The study app that will help you ace your upgrade!
-          </p>
-          <p class="mb-0">Developed By: Andrew Butler</p>
-          <br />
-          <hr class="divider" />
-          <p class="mb-0">Version 1.0.0 | Released 4.9.23</p>
+<div id="page-wrapper">
+  <section class="hero is-fullheight-with-navbar hero-custom">
+    <div class="hero-body">
+      <div class="container has-text-centered">
+        <div class="columns is-vcentered">
+          <div class="column is-12">
+            <h1 class="title is-1">Captain's Ascent</h1>
+            <br />
+            <p class="subtitle">
+              The Captain's Companion: Soaring to Success in Your Upgrade
+              Adventure!
+            </p>
+            <p class="mb-0">Developed By: Andrew Butler</p>
+            <br />
+            <hr class="divider" />
+            <p class="mb-0">Version 1.0.0 | Released 4.9.23</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+</div>
 
-<p><%- include('partials/footer') %></p>
+<%- include('partials/footer') %>
