--- a/views/questions/modify-questions.ejs
+++ b/views/questions/modify-questions.ejs
@@ -61,7 +61,7 @@
   </div>
 </section>
 <script>
-  function confirmDeletion() {
+  function confirmDeletion(event) {
     return confirm("Are you sure you want to delete this question?");
   }
 </script>
