--- a/views/questions/view-questions.ejs
+++ b/views/questions/view-questions.ejs
@@ -13,9 +13,9 @@
       >
         <thead>
           <tr>
-            <th class="text-center">Question</th>
-            <th class="text-center">Category</th>
-            <th class="text-center">Answer</th>
+            <th class="has-text-centered">Question</th>
+            <th class="has-text-centered">Category</th>
+            <th class="has-text-centered">Answer</th>
           </tr>
         </thead>
         <tbody>
