--- a/public/css/briefings.css
+++ b/public/css/briefings.css
@@ -1,10 +1,18 @@
 body {
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     box-sizing: border-box;
     font-family: 'Merriweather', serif;
+    background-color: #98c1d9;
 }
 
 .card {
     margin: 1rem;
+}
+
+#card-container {
+    flex: 1;
 }
