--- a/views/newNote.ejs
+++ b/views/newNote.ejs
@@ -1,4 +1,5 @@
-<%- include('./partials/header', {title: 'Notes'}) %>
+<%- include('./partials/header', {title: 'Notes', style: '../css/new-note.css'})
+%>
 <section class="section">
   <div class="container">
     <div class="columns is-centered">
@@ -32,7 +33,14 @@
 
           <div class="field">
             <div class="control">
-              <button class="button is-primary" type="submit">Save Note</button>
+              <button
+                id="save-note-btn"
+                class="button"
+                style="background-color: #ee6c4d"
+                type="submit"
+              >
+                Save Note
+              </button>
             </div>
           </div>
         </form>
