--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,7 +33,7 @@
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
       
-      <h1 class="is-size-3 has-text-weight-bold" style="color: #577D86">Let's UPGRADE!</h1>
+      <h1 class="is-size-3 has-text-weight-bold" style="color: #3d5a80;">UpgradeMastery</h1>
     </a>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -49,9 +49,7 @@
         Home
       </a>
 
-      <a class="navbar-item is-size-5 has-text-weight-bold" href="/quiz">
-        Start Quiz!
-      </a>
+      
 
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
@@ -82,16 +80,19 @@
           </a>
           
         </div>
+        <a class="navbar-item is-size-5 has-text-weight-bold" href="/quiz">
+          Start Quiz!
+        </a>
       </div>
     </div>
 
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a class="button" style="background-color: #569DAA; border-radius: 7px;">
+          <a class="button" style="background-color: #ee6c4d; border-radius: 7px;">
             <strong>Sign up</strong>
           </a>
-          <a class="button" style="background-color: #fff; color: #569DAA; border-radius: 7px;" href="/login">
+          <a class="button" style="background-color: #fff; color: #000; border-radius: 7px;" href="/login">
             <strong>Login</strong>
           </a>
         </div>
