--- a/views/categories/create.ejs
+++ b/views/categories/create.ejs
@@ -1,4 +1,5 @@
-<%- include('../partials/header', {title: 'Create New Category'}) %>
+<%- include('../partials/header', {title: 'Create New Category', style:
+'../css/add-categories.css'}) %>
 
 <section class="section">
   <div class="container">
@@ -12,7 +13,9 @@
       </div>
       <div class="field">
         <div class="control">
-          <button class="button is-primary" type="submit">Add Category</button>
+          <button class="button" id="add-category-btn" type="submit">
+            Add Category
+          </button>
         </div>
       </div>
     </form>
