--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,20 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %></title>
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    /> -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"> -->
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="../css/styles.css"> -->
     <link rel="stylesheet" href="/css/bulma/css/bulma.css">
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-icons@1.6.1/dist/css/bulma-icons.min.css" /> -->
     <% const stylesheet = locals.style || null; %>
     <% if(stylesheet) { %>
       <link rel="stylesheet" href="<%= style %>">
@@ -89,12 +79,18 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a class="button" style="background-color: #ee6c4d; border-radius: 7px;">
-            <strong>Sign up</strong>
-          </a>
-          <a class="button" style="background-color: #fff; color: #000; border-radius: 7px;" href="/login">
-            <strong>Login</strong>
-          </a>
+          <% if (!currentUser) { %>
+            <a class="button" style="background-color: #ee6c4d; border-radius: 7px;" href="/register">
+              <strong>Sign up</strong>
+            </a>
+            <a class="button" style="background-color: #fff; color: #000; border-radius: 7px;" href="/login">
+              <strong>Login</strong>
+            </a>
+          <% } else { %>
+            <a class="button" style="background-color: #fff; color: #000; border-radius: 7px;" href="/logout">
+              <strong>Logout</strong>
+            </a>
+          <% } %>
         </div>
       </div>
     </div>
