changed a couple of auth things

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,6 +16,7 @@
                     name="username"
                     required
                     class="input"
+                    autocomplete="off"
                   />
                 </div>
               </div>
@@ -28,6 +29,7 @@
                     name="password"
                     required
                     class="input"
+                    autocomplete="off"
                   />
                 </div>
               </div>
