working on approval for users

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header', {title: 'Upgrade Study App',
+<%- include('partials/header', {title: 'Upgrade Journey',
 style:'../css/main.css'}) %>
 
 <div id="page-wrapper">
@@ -7,11 +7,10 @@ style:'../css/main.css'}) %>
       <div class="container has-text-centered">
         <div class="columns is-vcentered">
           <div class="column is-12">
-            <h1 class="title is-1">Captain's Ascent</h1>
+            <h1 class="title is-1">Captain's Upgrade Journey</h1>
             <br />
             <p class="subtitle">
-              The Captain's Companion: Soaring to Success in Your Upgrade
-              Adventure!
+              Navigating to Success with Your Personal Upgrade Companion!
             </p>
             <p class="mb-0">Developed By: Andrew Butler</p>
             <br />
