--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,7 @@
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
       
-      <h1 class="is-size-3 has-text-weight-bold" style="color: #3d5a80;">UpgradeMastery</h1>
+      <h1 class="is-size-3 has-text-weight-bold" style="color: #3d5a80;">Upgrade Journey</h1>
     </a>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -43,15 +43,18 @@
 
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
-          More Options
+          Options
         </a>
 
         <div class="navbar-dropdown">
           <a class="navbar-item" href="/briefings">
-            Briefing Guides
+            Briefings
+          </a>
+          <a class="navbar-item" href="/flows">
+            Flows
           </a>
           <a class="navbar-item" href="/notes/create">
-            Take A Note
+            Create a Note
           </a>
           <a class="navbar-item" href="/notes/view-notes">
             View All Notes
@@ -59,9 +62,7 @@
           <a class="navbar-item" href="/questions/create">
             Add Questions
           </a>
-          <a class="navbar-item" href="/categories/create">
-            Add Categories
-          </a>
+          
           <a class="navbar-item" href="/modify-questions">
             Edit/Remove Questions
           </a>
