working on approval for users

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -40,35 +40,37 @@
       </a>
 
       
-
       <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">
-          Options
-        </a>
-
+        <a class="navbar-link">Options</a>
+      
         <div class="navbar-dropdown">
-          <a class="navbar-item" href="/briefings">
-            Briefings
-          </a>
-          <a class="navbar-item" href="/flows">
-            Flows
-          </a>
-          <a class="navbar-item" href="/notes/create">
-            Create a Note
-          </a>
-          <a class="navbar-item" href="/notes/view-notes">
-            View All Notes
-          </a>
-          <a class="navbar-item" href="/questions/create">
-            Add Questions
-          </a>
-          
-          <a class="navbar-item" href="/modify-questions">
-            Edit/Remove Questions
-          </a>
-          <a class="navbar-item" href="/view-questions">
-            View All Questions
-          </a>
+          <h3 class="navbar-item" style="font-weight: bold; font-size: larger; text-align: center;">Briefings</h3>
+          <a class="navbar-item" href="/briefings">Briefings</a>
+      
+          <hr class="navbar-divider">
+      
+          <h3 class="navbar-item" style="font-weight: bold; font-size: larger; text-align: center;">Flows</h3>
+          <a class="navbar-item" href="/flows">Flows</a>
+      
+          <hr class="navbar-divider">
+      
+          <h3 class="navbar-item" style="font-weight: bold; font-size: larger; text-align: center;">Notes</h3>
+          <ul>
+            <li><a class="navbar-item" href="/notes/create">Create a Note</a></li>
+            <li><a class="navbar-item" href="/notes/view-notes">View All Notes</a></li>
+          </ul>
+      
+          <hr class="navbar-divider">
+      
+          <h3 class="navbar-item" style="font-weight: bold; font-size: larger; text-align: center;">Questions</h3>
+          <ul>
+            <li><a class="navbar-item" href="/questions/create">Add Questions</a></li>
+            <li><a class="navbar-item" href="/modify-questions">Edit/Remove Questions</a></li>
+            <li><a class="navbar-item" href="/view-questions">View All Questions</a></li>
+          </ul>
+        </div>
+      </div>
+      
           
         </div>
         <a class="navbar-item is-size-5 has-text-weight-bold" href="/quiz">
