--- a/views/login.ejs
+++ b/views/login.ejs
@@ -35,7 +35,15 @@
               </div>
               <div class="field">
                 <div class="control">
-                  <button type="submit" class="button is-primary is-fullwidth">
+                  <button
+                    type="submit"
+                    class="button is-fullwidth"
+                    style="
+                      background-color: #ee6c4d;
+                      font-size: 1.5rem;
+                      color: #fff;
+                    "
+                  >
                     Login
                   </button>
                 </div>
