--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -1,78 +1,64 @@
 <%- include('partials/header', {title: 'Quiz Time!', style: './css/quiz.css'})
 %>
 
-<div class="container mt-5">
-  <div class="columns is-centered">
-    <div class="column is-10-desktop is-12-mobile">
-      <div class="box">
-        <div class="field">
-          <label class="label" for="categoryFilter">Filter by Category:</label>
-          <div class="control">
-            <div class="select is-fullwidth">
-              <select id="categoryFilter" name="categoryFilter" multiple>
-                <option value="">All Categories</option>
-                <% categories.forEach(function(category, index) { %>
-                <option value="<%= category.value %>">
-                  <%= category.name %>
-                </option>
-                <% }); %>
-              </select>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="box has-background-primary">
-        <div class="has-text-centered">
-          <label class="checkbox has-text-white" for="showAnswersCheckbox">
-            <input type="checkbox" id="showAnswersCheckbox" />
-            Show Answers
-          </label>
-        </div>
-      </div>
-      <div class="card">
-        <header class="card-header">
-          <p
-            id="question"
-            class="card-header-title is-size-5 has-text-centered is-centered"
-          ></p>
-        </header>
-        <div class="card-content">
-          <div class="content">
-            <p
-              id="answer"
-              class="card-text has-text-centered is-size-6 has-text-weight-semibold answer hide"
-            ></p>
-          </div>
-        </div>
-
-        <div class="btn-container">
-          <a
-            href="javascript:void(0);"
-            class="card-footer-item"
-            id="prev-question"
-          >
-            <button class="button is-fullwidth is-info is-rounded">Prev</button>
-          </a>
-          <a href="javascript:void(0);" class="card-footer-item">
-            <button
-              id="show-answer"
-              class="button is-fullwidth is-success is-rounded"
-            >
-              Show Answer
-            </button>
-          </a>
-          <a
-            href="javascript:void(0);"
-            class="card-footer-item"
-            id="next-question"
-          >
-            <button class="button is-fullwidth is-info is-rounded">Next</button>
-          </a>
+<!-- <section class="section"> -->
+<div class="container">
+  <div class="box">
+    <div class="field">
+      <label class="label" for="categoryFilter">Filter by Category:</label>
+      <div class="control">
+        <div class="select is-fullwidth">
+          <select id="categoryFilter" name="categoryFilter" multiple>
+            <option value="">All Categories</option>
+            <% categories.forEach(function(category, index) { %>
+            <option value="<%= category.value %>"><%= category.name %></option>
+            <% }); %>
+          </select>
         </div>
       </div>
     </div>
   </div>
+  <div class="box">
+    <div class="has-text-centered">
+      <label class="checkbox has-text-white" for="showAnswersCheckbox">
+        <input type="checkbox" id="showAnswersCheckbox" />
+        Show Answers
+      </label>
+    </div>
+  </div>
+  <div class="card-wrapper">
+    <div class="card">
+      <header class="card-header">
+        <p id="question" class="card-header-title"></p>
+      </header>
+      <div class="card-content">
+        <p id="answer" class="card-text answer hide"></p>
+      </div>
+      <footer class="card-footer">
+        <div class="btn-container">
+          <button
+            id="prev-question"
+            class="nav-btn button is-rounded"
+            style="background-color: #ee6c4d"
+          >
+            Prev
+          </button>
+          <button id="show-answer" class="answer-btn button is-rounded">
+            Show Answer
+          </button>
+          <button
+            id="next-question"
+            class="nav-btn button is-rounded"
+            style="background-color: #ee6c4d"
+          >
+            Next
+          </button>
+        </div>
+      </footer>
+    </div>
+  </div>
 </div>
+<!-- </section> -->
 
 <script src="js/quiz.js"></script>
 <%- include('./partials/footer') %>
