--- a/views/view-notes.ejs
+++ b/views/view-notes.ejs
@@ -38,7 +38,7 @@
                 Created on: <%= new
                 Date(note.createdAt).toLocaleString(undefined, { year:
                 'numeric', month: 'long', day: 'numeric', hour: '2-digit',
-                minute: '2-digit' }) %>
+                minute: '2-digit', timeZoneName: 'short' }) %>
               </small>
             </div>
           </header>
