added an admin console for approving users

--- a/views/admin/users-awaiting-approval.ejs
+++ b/views/admin/users-awaiting-approval.ejs
@@ -20,7 +20,7 @@
           <td><%= user.employeeNumber %></td>
           <td>
             <form action="/admin/approve-user/<%= user._id %>" method="POST">
-              <button class="button is-success" type="submit">Approve</button>
+              <button class="button approve-btn" type="submit">Approve</button>
             </form>
           </td>
         </tr>
